# context-builder

./: .gitignore  DEVELOPMENT.md  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
droidctx/: __init__.py  auto_detect.py  auto_sync.py  cli_tools.py  config.py  constants.py  credential_mapper.py  extractor_runner.py  k8s_cli_extractor.py  main.py  markdown_generator.py  progress.py  scheduler.py  sync_engine.py
tests/: test_auto_detect.py  test_auto_sync.py  test_check.py  test_cli_mode_validation.py  test_cli_tools.py  test_config.py  test_credential_mapper.py  test_init.py  test_k8s_cli_extractor.py  test_markdown_generator.py  test_service_crossref.py  test_sync_engine.py
